replace nav link with a home buttom

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,13 +1,8 @@
 @use '@angular/material' as mat;
 @import "src/_material-theme.scss";
 
-ul {
-    list-style: none;
-}
-
-li {
-    display: inline-block;
-    margin-right: 20px;
+.home-button {
+    margin-left: -10px;
 }
 
 .connection-menu {
