--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="accent">
+    <button class="home-button" mat-icon-button color="primary" routerLink="">
+        <mat-icon>home</mat-icon>
+    </button>
     <span>Groupomania</span>
-    <ul>
-        <li><a routerLink="/social-network">Accueil</a></li>
-    </ul>
     <div class="connection-menu">
         <div *ngIf="user$ | async as user; else disconnected" class="connection-menu">
             <span>({{ { firstName: user.firstName, lastName: user.surName, pseudo: user.pseudo } | username }})</span>
