fix: define material theme only once

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
+@use '@angular/material' as mat;
 @import "_material-theme.scss";
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($groupomania-front-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
