--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar class="toolbar" color="accent">
     <button class="home-button" mat-icon-button color="primary" routerLink="">
         <mat-icon>home</mat-icon>
     </button>
