--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 @use '@angular/material' as mat;
 @import "_material-theme.scss";
 
+$success-text-color: #015B40;
+$success-background-color: #d7ffd7;
+
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -10,3 +13,21 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.error-snack-bar {
+    background-color: mat.get-color-from-palette($groupomania-front-accent, default);
+    color: mat.get-color-from-palette($groupomania-front-primary, default);
+
+    & button {
+        color: mat.get-color-from-palette($groupomania-front-primary, default);
+    }
+}
+
+.success-snack-bar {
+    background-color: $success-background-color;
+    color: $success-text-color;
+
+    & button {
+        color: $success-text-color;
+    }
+}
