feat: center the image of a post

--- a/src/app/posts/components/post/post.component.scss
+++ b/src/app/posts/components/post/post.component.scss
@@ -11,8 +11,15 @@
         right: 0;
     }
 
+    .mat-card-content {
+        display: flex;
+        flex-direction: column;
+    }
+
     .mat-card-image {
         margin-top: 0;
+        align-self: center;
+        width: auto;
     }
 
     mat-card-header {
