feat: use Lato font family

--- a/src/_material-theme.scss
+++ b/src/_material-theme.scss
@@ -4,6 +4,8 @@
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 
+@import '@angular/material/theming';
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -103,3 +105,8 @@ $groupomania-front-theme: mat.define-light-theme((
     warn: $groupomania-front-warn,
   )
 ));
+
+$custom-typography: mat-typography-config(
+  $font-family: Lato
+);
+@include mat-core($custom-typography);
