--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ $success-background-color: #d7ffd7;
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Lato, "Helvetica Neue", sans-serif; }
 
 .error-snack-bar {
     background-color: mat.get-color-from-palette($groupomania-front-accent, default);
