--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="signup-wrapper form">
+<div class="signup-wrapper form generic-card">
     <div class="mat-card-container">
         <mat-card [formGroup]="mainForm" class="main-form">
             <mat-card-title class="form-title">Inscription</mat-card-title>
