--- a/src/app/page-not-found/components/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,9 @@
-<p>404 - Page not found</p>
+<mat-card class="page-404-card">
+    <mat-card-title class="page-404-title">Erreur 404</mat-card-title>
+    <mat-card-subtitle class="page-404-subtitle">Page introuvable</mat-card-subtitle>
+    <mat-card-content>
+        <p class="page-404-text">Nous sommes désolés, la page que vous recherchez n'a pas pu être trouvée.</p>
+        <p class="page-404-text">Veuillez retourner à l'accueil.</p>
+        <button routerLink="" class="go-home-button" mat-raised-button>Aller à l'accueil</button>
+    </mat-card-content>
+</mat-card>
