--- a/src/app/posts/components/post/post.component.scss
+++ b/src/app/posts/components/post/post.component.scss
@@ -20,6 +20,8 @@
         margin-top: 0;
         align-self: center;
         width: auto;
+        max-width: 100%;
+        max-height: 95vh; // 95% of the viewport height (because of the header)
     }
 
     mat-card-header {
@@ -43,6 +45,10 @@
         // height for the post text ellipsis (ngx-ellipsis)
         max-height: 6.5rem;
     }
+
+    .card-actions {
+        margin: 0;
+    }
     
     .actions-bar {
         display: flex;
@@ -50,6 +56,7 @@
     }
     
     .comments-button {
+        padding: 0;
         font-weight: 600;
         color: mat.get-color-from-palette($groupomania-front-primary, default);
     
