--- a/src/app/posts/components/comments/comments.component.html
+++ b/src/app/posts/components/comments/comments.component.html
@@ -12,16 +12,17 @@
         <button [disabled]="disabled" class="load-more-button" *ngIf="!noMoreCommentToLoad && !loading" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more comments">Afficher plus ...</button>
         <mat-list *ngIf="comments.length" @list>
             <mat-list-item *ngFor="let comment of comments; let i = index"
-                    [@listItem]="animationStates[i]"
-                    (mouseenter)="onListItemMouseEnter(i)"
-                    (mouseleave)="onListItemMouseLeave(i)"
+            [@listItem]="animationStates[i]"
+            (mouseenter)="onListItemMouseEnter(i)"
+            (mouseleave)="onListItemMouseLeave(i)"
             >
-                <span class="comment-author-date" mat-line>
-                    <span class="comment-author">{{ { firstName: comment.author.firstName, lastName: comment.author.surName, pseudo: comment.author.pseudo } | username }}</span>
-                    <span class="comment-date">{{ comment.createdAt | timeAgo }}</span>
-                </span>
-                <span class="comment-text" mat-line>{{ comment.text }}</span>
-            </mat-list-item>
+            <span class="comment-author-date" mat-line>
+                <span class="comment-author">{{ { firstName: comment.author.firstName, lastName: comment.author.surName, pseudo: comment.author.pseudo } | username }}</span>
+                <span class="comment-date">{{ comment.createdAt | timeAgo }}</span>
+            </span>
+            <span class="comment-text" mat-line>{{ comment.text }}</span>
+            <mat-divider *ngIf="i !== comments.length-1"></mat-divider>
+        </mat-list-item>
         </mat-list>
     </div>
 </div>
