--- a/src/_material-theme.scss
+++ b/src/_material-theme.scss
@@ -49,7 +49,7 @@ $secondary-palette: (
   900: #c34423,
   contrast: (
     50: rgba(black, 0.87),
-    100: rgba(black, 0.87),
+    100: rgba(#891701, 1.0),
     200: rgba(black, 0.87),
     300: rgba(black, 0.87),
     400: rgba(black, 0.87),
