fix: add some h2 to the template for accessibility

--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -22,7 +22,11 @@
     }
 
     .form-title {
-        margin-bottom: 25px;
+        margin-bottom: 10px;
+
+        h2 {
+            font-size: inherit;
+        }
     }
     
     .form-group {
