--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper form generic-card">
     <div class="mat-card-container">
         <mat-card [formGroup]="mainForm" class="main-form">
-            <mat-card-title class="form-title">Connexion</mat-card-title>
+            <mat-card-title class="form-title"><h2>Connexion</h2></mat-card-title>
             <div class="form-row">
                 <mat-form-field appearance="fill">
                     <mat-label>Email</mat-label>
