--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="signup-wrapper form generic-card">
     <div class="mat-card-container">
         <mat-card [formGroup]="mainForm" class="main-form">
-            <mat-card-title class="form-title">Inscription</mat-card-title>
+            <mat-card-title class="form-title"><h2>Inscription</h2></mat-card-title>
             <div class="form-group" formGroupName="personalInfo">
                 <div class="form-row">
                     <mat-form-field appearance="fill">
