--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -10,12 +10,12 @@
                 </mat-form-field>
                 <mat-form-field appearance="fill">
                     <mat-label>Mot de passe</mat-label>
-                    <input type="password" matInput formControlName="password">
+                    <input type="password" matInput formControlName="password" (keydown.enter)="onSubmitForm()">
                     <mat-error>Ce champ est requis</mat-error>
                 </mat-form-field>
             </div>
             <mat-card-actions>
-                <button [disabled]="!mainForm.valid" mat-flat-button color="primary" (click)="onSubmitForm()">Se connecter</button>
+                <button [attr.aria-disabled]="!mainForm.valid" mat-flat-button color="primary" (click)="onSubmitForm()" [ngClass]="{ 'disabled-button': !mainForm.valid }">Se connecter</button>
             </mat-card-actions>
             <mat-spinner *ngIf="loading" color="primary" mode="indeterminate"></mat-spinner>
             <p>Vouc n'avez pas de compte ? <a routerLink="/signup">S'inscrire</a></p>
